--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-streamlit==1.32.0
-scikit-learn==1.4.2
+pip>=24.2
+setuptools>=68.0
+wheel
+
+streamlit==1.36.0
+scikit-learn==1.5.1
 nltk==3.9.1
-numpy==1.26.4
+numpy==2.1.2
+pandas==2.2.2
+matplotlib==3.9.2
